--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <label for="Message" class="form-label">Message</label>
                   <textarea class="form-control" id="Message" rows="3"></textarea>
                 </div>
-              <button type="submit" class="btn btn-primary">Send</button>
+              <button type="submit" class="btn btn-danger">Send</button>
             </form>
           </div>
         </div>
